--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,33 @@
+@import url(clash-grotesk.css);
+
 * {
     box-sizing: border-box;
     border-radius: 16px;
     margin: 0%;
+    font-family: 'ClashGrotesk-Variable', sans-serif;
 
 }
 
+h1 {
+    font-size: 75px;
+    font-family: 'ClashGrotesk-Variable', sans-serif;
+    font-weight: 600;
+    line-height: 120px;
+    letter-spacing: -0.96px;
+    /* height: 25px; */
+}
+
+h2 {
+    margin-top: 3%;
+    font-size: 36px;
+    font-family: 'ClashGrotesk-Light', sans-serif;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #FFF;
+}
+
 header {
+    display: flex;
     width: 1200px;
     height: 96px;
     margin: auto;
@@ -19,14 +41,18 @@ header {
 nav {
     width: 100vw;
     display: inline-flex;
+    gap: 90px;
     align-items: center;
     position: relative;
     padding: 13px 18px;
 }
 
 nav ul {
-
+    width: 500px;
+    margin-bottom: 0.5%;
     margin-left: 5%;
+    padding-left: 0%;
+
 }
 
 
@@ -56,27 +82,39 @@ main {
 }
 
 footer {
-    width: 1248px;
+    width: 100vw;
     height: 128px;
     border-radius: 0%;
     background-color: #2A2C2E;
 
 }
 
+
+
 .hero-text {
+    gap: 8px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin: auto;
-    border: 2px solid black;
-    width: 1200px;
-    height: 433px;
+    justify-content: center;
+    /* border: 2px solid black; */
+    width: 1400px;
+    height: 500px;
 
 }
 
 .book-grid {
-    width: 1248px;
-    height: 882px;
+    padding-left: 140px;
+    width: 100vw;
     background-color: #2A2C2E;
     border-radius: 0%;
     flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
 }
 
 .front-banner {
@@ -86,7 +124,7 @@ footer {
 }
 
 .author-grid {
-    width: 1248px;
+    width: 100vw;
     height: 523px;
     background-color: #2A2C2E;
     border-radius: 0%;
@@ -118,4 +156,56 @@ footer {
 .txt-button {
     padding: 16px 28px;
     background-color: #F4CE47;
+    margin-left: 30px;
+}
+
+.hero-left-container {
+    display: flex;
+    width: 596px;
+    height: 348px;
+    padding: 24px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: var(--black-bg, #2A2C2E);
+}
+
+.hero-right-container {
+    display: flex;
+    object-fit: contain;
+    width: 596px;
+    height: 348px;
+    padding: 24px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: var(--black-bg, #2A2C2E);
+}
+
+.hero-right-container img {
+
+    max-width: 109%;
+    max-height: 100%;
+    display: block;
+    translate: -24px -24px;
+}
+
+.book-grid-wrapper {
+    margin-bottom: 75px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+
+}
+
+.book-grid-block {
+    width: 395px;
+    height: 200px;
+    /* padding: 16px; */
+    border-radius: 20px;
+    background: var(--white-high-emphasis, #FFF);
 }
