--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,8 @@ h1 {
 
 h2 {
     margin-top: 3%;
+    padding-bottom: 25px;
+
     font-size: 36px;
     font-family: 'ClashGrotesk-Light', sans-serif;
     line-height: 56px;
@@ -105,14 +107,14 @@ footer {
 }
 
 .book-grid {
-    padding-left: 140px;
+    padding-left: 100px;
     width: 100vw;
     background-color: #2A2C2E;
     border-radius: 0%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     gap: 20px;
 }
@@ -124,19 +126,30 @@ footer {
 }
 
 .author-grid {
+    padding-left: 100px;
     width: 100vw;
     height: 523px;
     background-color: #2A2C2E;
     border-radius: 0%;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 
 }
 
 .bottom-section {
     margin: auto;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     width: 1200px;
-    height: 192px;
-
+    height: 210px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .header-button {
@@ -194,18 +207,101 @@ footer {
     translate: -24px -24px;
 }
 
+.book-grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .book-grid-wrapper {
+    width: 1300px;
     margin-bottom: 75px;
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
+    flex-grow: 0;
 
 }
 
 .book-grid-block {
     width: 395px;
     height: 200px;
+    padding: 16px;
+    border-radius: 20px;
+    background: var(--white-high-emphasis, #FFF);
+}
+
+.author-grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.author-grid-wrapper {
+    width: 1300px;
+    margin-bottom: 75px;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    flex-wrap: wrap;
+    gap: 8px;
+    flex-grow: 0;
+
+}
+
+.author-grid-block {
+    width: 294px;
+    height: 146px;
     /* padding: 16px; */
     border-radius: 20px;
     background: var(--white-high-emphasis, #FFF);
+}
+
+.small-banner-component {
+    border-radius: 20px;
+    width: 437px;
+    height: 192px;
+    padding: 68px 29px;
+    background: var(--black-bg, #2A2C2E);
+}
+
+.medium-banner-component {
+
+    display: flex;
+    width: 697px;
+    height: 192px;
+    padding: 68px 35px;
+
+    border-radius: 20px;
+    background: var(--black-bg, #2A2C2E);
+}
+
+.footer-up {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0px 100px;
+    padding: 25px 20px;
+}
+
+.logo-box-footer {
+    display: flex;
+    width: 260px;
+    padding: 6.658px 0.321px 0px 0px;
+    justify-content: center;
+    align-items: center;
+    gap: 13.273px;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.website-logo-footer {
+    scale: 150%;
+}
+
+#yellow-bg {
+    background-color: #F4CE47;
 }
