--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,6 +106,12 @@ footer {
 
 }
 
+button:hover {
+    cursor: pointer;
+
+
+}
+
 .book-grid {
     padding-left: 100px;
     width: 100vw;
@@ -167,9 +173,16 @@ footer {
 }
 
 .txt-button {
+    font-size: 16px;
+    /* font-family: Clash Grotesk Variable; */
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.024px;
     padding: 16px 28px;
     background-color: #F4CE47;
     margin-left: 30px;
+    border: none;
 }
 
 .hero-left-container {
