--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,12 @@
 @import url(clash-grotesk.css);
+@import url('https://fonts.googleapis.com/css2?family=Literata:wght@200&display=swap');
 
 * {
     box-sizing: border-box;
     border-radius: 16px;
     margin: 0%;
-    font-family: 'ClashGrotesk-Variable', sans-serif;
+
+
 
 }
 
@@ -19,7 +21,7 @@ h1 {
 
 h2 {
     margin-top: 3%;
-    padding-bottom: 25px;
+    padding-bottom: 1em;
 
     font-size: 36px;
     font-family: 'ClashGrotesk-Light', sans-serif;
@@ -65,6 +67,22 @@ nav li {
     margin-right: 10px;
     margin-left: 10px;
     color: #ffffff;
+    font-family: 'Literata', serif;
+    font-size: 0.9em;
+    font-family: Literata;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0.024px;
+
+}
+
+a {
+    all: unset;
+}
+
+a:hover {
+    cursor: pointer;
 }
 
 body {
@@ -106,11 +124,7 @@ footer {
 
 }
 
-button:hover {
-    cursor: pointer;
 
-
-}
 
 .book-grid {
     padding-left: 100px;
@@ -166,36 +180,47 @@ button:hover {
 
 }
 
-.icon-button {
 
-    background-color: transparent;
-    border: none;
-}
 
-.txt-button {
-    font-size: 16px;
-    /* font-family: Clash Grotesk Variable; */
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.024px;
-    padding: 16px 28px;
-    background-color: #F4CE47;
-    margin-left: 30px;
-    border: none;
-}
+
 
 .hero-left-container {
+    position: relative;
+    overflow: hidden;
     display: flex;
     width: 596px;
     height: 348px;
     padding: 24px;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: flex-start;
     flex-shrink: 0;
     border-radius: 20px;
     background: var(--black-bg, #2A2C2E);
+}
+
+.hero-left-container div {
+    padding: 0px 220px 0px 0px;
+}
+
+.hero-left-container p {
+    color: #FFF;
+    font-family: 'Literata', serif;
+    font-size: .9em;
+    font-family: Literata;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0.024px;
+    margin-bottom: 40px;
+    margin-top: -25px;
+}
+
+.hero-left-container svg {
+    position: absolute;
+    top: 49px;
+    left: 200px;
+    width: 500px;
 }
 
 .hero-right-container {
