--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,11 +262,27 @@ footer {
 }
 
 .book-grid-block {
+    
     width: 395px;
     height: 200px;
     padding: 16px;
     border-radius: 20px;
     background: var(--white-high-emphasis, #FFF);
+    display: flex;
+    flex-direction: column;
+    /* align-items: start; */
+    /* justify-content: center; */
+}
+
+.book {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+}
+.object-contain {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .author-grid-container {
@@ -340,6 +356,6 @@ footer {
     scale: 150%;
 }
 
-#yellow-bg {
+.yellow-bg {
     background-color: #F4CE47;
 }
